--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  pub-sub-rabit-mq-broker:
+  message-broker:
     image: rabbitmq:3-management
     ports:
       - 15672:15672
