--- a/MessageBroker.Infrastructure/MessageBroker.Infrastructure.csproj
+++ b/MessageBroker.Infrastructure/MessageBroker.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
   </ItemGroup>
 
